@@ -7,11 +7,13 @@ DIST gitlab-workhorse-2.0.0.tar.bz2 656360 SHA256 4e9864b7885b1102d9eb18e9c4bd3b
 DIST gitlab-workhorse-2.1.1.tar.bz2 658851 SHA256 ab827cfa89f5d3e711357a0317a022b4d5db4d91c01ad0b80b56120e315da899 SHA512 6a316647faff83352c344cc36ef7fbaf327dfab9b8f893c39e22d4cde7e78fe703680d2851663953ee94b3ac9f55a142b5380ed23f26a7600044a3af2fdea08f WHIRLPOOL abded7f69b1a1ddc1aed3f8a8b1ddae89aa19eaa67ac1be1847f3ad6a0f5a23142f60fee545a358ecf27f2b15d4630eb42ea0b68a7076af9e26ee36d9db1243e
 DIST gitlab-workhorse-2.3.0.tar.bz2 673735 SHA256 61dc7ea978223a56e5f2e4617195e43c9e3179f0057e416545060143ea90ae0e SHA512 290713086d8c30fbbc80d32b6924368ceffceb08fc9330403250b775bab20454d5843bfd7b37c1d88fa60d1bebd5b14d7e8bb6b3557142b56b1d9ab02ce46aee WHIRLPOOL a1507a68c06d7335e5fdae4cbb91b01ddcc9d7c988758fd892676c6a78c9746c6f1fa89fe369efdd2352f85c7dade00554263e1a969ce10dfc87983c3136bf6f
 DIST gitlab-workhorse-3.0.0.tar.bz2 678497 SHA256 6a72db70a49c4004881b4e5e727ac088e6b976144466b1e7a5362eb720bcb546 SHA512 25be040a20948a2e82e56e531ed030174a7c0dead542b998a70213aeed4a565eebc6e206fed202d52c538781f25715b93c5dd9708171addb222d13be4c49bb55 WHIRLPOOL 07d3d17bf1d7318fce000fbd8da4d4d8f47040b3ac92efe955ae84ccc9636eb0d8a86816b59caf717848340f53b43d0724bb577d143e2a4524a24eea5e48e33a
-EBUILD gitlab-workhorse-1.4.2.ebuild 1019 SHA256 12e00f04075eb815e41640f4ca906ce1aaa833104e79c43f19c1a34c4454ce2c SHA512 8b430448c28ea695502f08928626f628657d58582439c3458370a56dc134c108c24f266a3fe2353b1ecd5082d2e53b985fa998b8919b60f81836579c884555e3 WHIRLPOOL ff37a454aa77734d4cd15b6bc4181a5dc8f1ead2d03710fdc59a514cbaa0a67202ded330021f2c6f763797763b8de94e2ffe86c90cba2336903479abcdfc3437
-EBUILD gitlab-workhorse-1.4.3.ebuild 1019 SHA256 9f04f9b9a1af3b6a14af32fc27143ef98cf8d5ea297c754e2af2f75faab90cf9 SHA512 f38aee3ae9318d4db08a6f5bf55a7d25944ca65d132f23e5638e670a31745381d93a39d9489409ee75de943edf80af555638b2748d3eb7b1b8b0d65d8c02d6e7 WHIRLPOOL 60491062d73591e137a7a6d6875174a7f7c31c6972d104c2dd856ef8513276617e1be97f18679853b86638d92ba87152ca5b3f17c43dee79db2918e3e3139584
-EBUILD gitlab-workhorse-2.0.0.ebuild 1019 SHA256 6b5b1af7f4bb91d6f38b5160ea4a1711392ba42ae296388c72ceeb1e19dabf99 SHA512 aa607720a13052e2fa5e086d3f5fa2bac42dc9a1028940c6c42e9307596439bb89f6405d23a8f2c216ff9a15e2d83be373adddb6598ed84b7b00af872cd8efc3 WHIRLPOOL 9cd700793dbad67c8a88bf7794bc1273e809b8435702c4359b12c25006fa1a08c8d5963ab76ac75bd46d520442b3195a79659718f8c7bca49d7fb5b4c0d9d6b1
-EBUILD gitlab-workhorse-2.1.1.ebuild 1019 SHA256 0b119e55032bf471921e9011cb3a119b45a78000eae87d9ef28b2c314e302793 SHA512 aa571922dec9bf71d48b0ab23356642bf031328fc18c99600221fff5931259a2127e50432e1fd30c8656dec2ec8fa395d8e15c34f65f2a005c08420f26bcf54b WHIRLPOOL daa44b0fc118f2c05b38ddaf96c78aee1a25993c35ec5a71f4647d95ccfc8cd20362de9e6c9331d531ecd81799733953aef4297c1350d4fd223d9b003e75ab04
-EBUILD gitlab-workhorse-2.3.0.ebuild 1019 SHA256 1e7b0b9f7ca61afbdbb525eecb934a858be6bd91ff7ef6614eed2899f207fc8b SHA512 ec98e6aa09ba6245195fa4666fa4174a9ba595922f351dd660c161f419e84dd2c284373a310b55acf986082d175e1659e9396a9c7a3cc324a540b7d67222aaa6 WHIRLPOOL ba7bb5b5a333161bc4a3b04cd00f97893e9e93e63ee505b97d757676520cbbd06d2616be69a248ac81ea3135589fb3f11cd4333f266e1fa293890982d790399e
-EBUILD gitlab-workhorse-3.0.0.ebuild 1019 SHA256 c7bffd0014cc64cc92eeb3566d3af38619bb29ccb5b8d755eb3e86d66c088ea0 SHA512 32a35851126f109da9a3ac12b43ae5b654193d7b4fd0b03fa501d810e1cddf03ae0f4004aedf2d9d98ccda7ca99e689e55f67dda19748bf47e76259b5416575c WHIRLPOOL e0c4403800788d653fcaaf827251771f621ccad15633728b731b52c278b2b33b39321356b2620110597dceb18c2754c460d78685f5a79ef6afda030f2aab24fb
-MISC ChangeLog 7364 SHA256 1201f257e1f27e1ad998346e9ca64e3ee5a010c1d5525f5a3ddbf0468daa7df4 SHA512 954f059e8fc735abbc463a6a55e084092523384ce64aa157a6aefd94d1ee938414a8e5c20dc4163781ae4781d255cd9378a0afde3a5036e0028cadee987fdad0 WHIRLPOOL f5b327abbae59e6672ebfd4ff229713ff38618752f847432914d2aa227798b25d901dad395e51ebb8ba9aed41f2df5a7d71eefa46a2ac3d28e4bef22cc72ce10
+DIST gitlab-workhorse-3.2.0.tar.bz2 700671 SHA256 4a38d307b7b5a61f74078000614b2b3e2730fd637da5477a58d7f7efe9ce7008 SHA512 6f971f17516d6ed7f74779656813959cfe0d588a9a0bd81f925146f5f2d64104c2b0472032a6d7c0dee3ea3f2755fa8127cee80af717dbc9174d8a12d437df5e WHIRLPOOL 3132f046cbf73ebcc648283f6e9eec38326043166ae2bbca19168801304122c45478f3e8aaf94c1b8af25b9a3a379bc10c7a7ef291fbaa07a108e0e6869c3a8e
+EBUILD gitlab-workhorse-1.4.2.ebuild 1012 SHA256 c619e29723a64caea3d7e3105c686e4e138bd35318af847440f14ace48fbb8b7 SHA512 7485fc018ea6cadabdeca8c89787d0c1103c46cb635282d8bc48fd801a693450cd50d3e899f68d29ee3043281551405b5fe9777e1b620ca0519e913f68e8a5b8 WHIRLPOOL 15fa160b642d90b8c13b846428c8ea74ba17617c74aac71ccd434fdadbbf5c8049bfdfd08aec034b1c18c8da10d52a41ec4e10f64da680a5d37f8ecdb90b8d81
+EBUILD gitlab-workhorse-1.4.3.ebuild 1012 SHA256 e82630ed25d51514b4e6638b6f49777ff00cdc2f93a8a7d4d6ab87655b5734d3 SHA512 a760e43573b7e8202f2e5fe6c481fb0376816b3d45ddd93205aa2798f510297632f80341c3e77ad1700f7ddfbac7e591d97834505f71466e7af67a0c5135e527 WHIRLPOOL 8f63a99b538eb4c88e76171bde90ea7bf2ed5b87b9b2e5fe6293fb01b1f6b4f81def5e02307e07896e5f3e0e47b4d550b9d9d28b1991032c608f5bbe0a21eb05
+EBUILD gitlab-workhorse-2.0.0.ebuild 1012 SHA256 4bf03b159710c22996450e9141b42e846e206433cd1f1d3ac52ada84996d8edd SHA512 5899843cbd910cf293f5d33ed4ffbfd5075d54d547d4d9f14d425b12ff81bd95fac54d258239cbae9845f7898daad796e38966a021414e321bd37a4ecbccbfd0 WHIRLPOOL 2c345b6cb8939cf97721701fedb00574699dd3b87a88d726e532c6c3db46c405e2bff2474a84da235b231295aef6e70924f624d35efb0844130f3b2881ae05a2
+EBUILD gitlab-workhorse-2.1.1.ebuild 1012 SHA256 166a2cba843736735ab232b3bd0008b6fc1134884d47293f4b97cd4b2d072f5a SHA512 dca4d6765f4abf738c45917294d58237b94555d7851352518277cddc4fa51cb4118ca21bc8ca64b1db57b562c4665da7fc7d9c8c40ccd51ae408d88ec92cd425 WHIRLPOOL efa7829ff8059517c66a374e74bc9e2e27817ecf92d1845da45d44f7d46561ec5e98cf88de9cfa19a3454d11c8622b639cf48b488cc7b57fa0e03d0cd4dcae0c
+EBUILD gitlab-workhorse-2.3.0.ebuild 1012 SHA256 088c7d911e144a8a55889dfcdfab84126d2ee28df1d5a3e566856a1ceb1f0dfc SHA512 d95868b8033f518b96d9401e07a4dbe81b380114e4c5907c89e73f6ca820440d4b7471dded25407d4cc817dbbbcf348943f72c251bebf06c866aa9bc91f1a3ff WHIRLPOOL c4774879016f5952463ad7c231ca42b8e34999aaa7db60e2358e15b3ae864316e559213b8166fde0aeed6afb0fc8aa3ba89ca0b7a1247e19377ebf52c8f0a39f
+EBUILD gitlab-workhorse-3.0.0.ebuild 1012 SHA256 cd7d9f593221b3ef2baeea527060ef56178a71332af7a5bdfcd6285c49c9f329 SHA512 7c9d1bf373e2557b6a01f8fecfacf142322fed91cebc462a249f7cb1e02a953d4fd6bce2e8283adb6a9060c9a0cb2e7cb1b99da8a1926210c3d580589643fe0b WHIRLPOOL 61521ad8c87744395ada1300c5d3d237b2b356dd874232f371eb7ed2a6a90b29155cad810953a3f82d872318bbad6fb164fc9ac80a836a9d42326bb651e2a797
+EBUILD gitlab-workhorse-3.2.0.ebuild 1012 SHA256 4dc3f893683d0fab13d4c0d43090df4bdcd5543dff4ca74940999cb797aa7312 SHA512 199d418e6a1e60b183a16f28f08cc20fa67771395d9f2da741227f102d40d71d91a5c27bb8d9741995a2aa117111dbffe6bea9ef854f3c35bb41ed81045ab88d WHIRLPOOL 07f534716e45600c9bb9912c1f7beca402067df7b572965e08e431f922327de541614952b37ec126bcb7bb6ae8d66fe4084f4183d75d2e686fd6888a4b866ea5
+MISC ChangeLog 7733 SHA256 363b495dfa6196da200b85afbd4e97e9bb30a7ce92d8f94fd2d918432d468921 SHA512 1c3fba3339a88816d78f25376d3f69b24d8dea4dd488b614c4013ed46d7867ada6a95745662f5f99790830eedf5f940a62e0a8f8ba6e1422fdfca86a1b721df6 WHIRLPOOL 239fb4cb3a9757164cac2735f96f817c73dfd26534ee58eb4b6a9e895605721f9890b7ca84c1b8b0611e4d7f12ac87432ba8ed6128773b8e356164dc0ce7e95f
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
